newTest.html changed

--- a/src/newTest.html
+++ b/src/newTest.html
@@ -8,6 +8,20 @@
     <title>Document</title>
 </head>
 <body>
-Поля для введения нового теста
+<p>Введите тему теста:</p>
+<input id="newTheme">
+<p>Введите вопрос:</p>
+<input id="newQuestion">
+<p>Введите правильный ответ:</p>
+<input id="newAnswer">
+<p>Введите первый неправильный ответ:</p>
+<input id="newWrongAnswer1">
+<p>Введите второй неправильный ответ:</p>
+<input id="newWrongAnswer2">
+<p>Введите третий неправильный ответ:</p>
+<input id="newWrongAnswer3"><br><br><br>
+<button>Отправить на рассмотрение</button>
+<br><br><br>
+Спасибо!
 </body>
 </html>
