some changes in style

--- a/src/index.html
+++ b/src/index.html
@@ -8,27 +8,23 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <title>CYKA</title>
 </head>
-<body>
+<body и>
 
-<div class="container">
-    <h1 class="text-primary">CYKA</h1><br>
-    <p>Check
-    Your
-    Knowledge
-        Automatically</p><br>
-
-    Узнай по какой теме тебе стоит дополнительно подготовиться перед экзаменом или собеседованием при трудоустройстве!<br>
+<div class="container-fluid">
+    <h1 class="text-primary">CYKA</h1>
+    <h3 class="text-primary">Check Your Knowledge Automatically</h3>
+    <h5 class="text-primary">Узнай по какой теме тебе стоит дополнительно подготовиться перед экзаменом или собеседованием при трудоустройстве!<br>
     ШАГ 1 – выбери категорию, в которой ты хочешь проверить свои знания и навыки<br>
     ШАГ 2 – пройди тест<br>
-    ШАГ 3 – получай результаты и готовься!
+    ШАГ 3 – получай результаты и готовься!</h5>
 
 </div>
-<button id="start" type="button" class="btn btn-primary">Приступить к тесту</button><br><br>
-<button id="training" type="button" class="btn btn-primary">Приступить к тренировке</button><br><br>
-<button id="donat" type="button" class="btn btn-primary">Задонатить деньги на развитие ресурса</button><br><br>
+<button id="start" type="button" class="btn btn-primary">Приступить к тесту</button>
+<button id="training" type="button" class="btn btn-primary">Приступить к тренировке</button>
+<button id="donat" type="button" class="btn btn-primary">Задонатить деньги на развитие ресурса</button>
 <button id="newTest" type="button" class="btn btn-primary">Предложить тест</button><br><br>
 
-<ul>Feedback'шная:</ul>
+<h3 class="text-primary">Feedback'шная:</h3>
 <div class="card" style="width: 18rem;">
     <img src="jpeg/Larisa1.jpg" class="card-img-top" alt="...">
     <div class="card-body">
@@ -48,7 +44,7 @@
     </div>
 </div>
 
-<ul>Здесь могла быть ваша реклама! <a href="donat.html">Кликайте!</a></ul>
+<h6>Здесь могла быть ваша реклама! <a href="donat.html">Кликайте!</a></h6>
 <script src="js/app.js" type="module"></script>
 
 </body>
