some changes in style and in alert in appTest.js

--- a/src/allTests.html
+++ b/src/allTests.html
@@ -5,24 +5,24 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="style/style.css">
-    <title>Все тесты</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <title>Выбор категории</title>
 </head>
 <body>
-<div>Выбирай категорию</div><br>
-<button id="programming">Программирование</button><br>
-<button id="physics">Физика</button><br>
-<button id="chimistry">Химия</button><br>
-<button id="oil">Нефтяная промышленность</button><br>
-<button id="sport">Спорт</button><br>
-<button id="phylosophy">Философия</button><br>
-<button id="history">История</button><br>
-<button id="math">Математика</button><br>
-<button id="geography">География</button><br>
-<button id="medicine">Медицина</button><br>
-<button id="journalism">Журналистика</button><br>
-<button id="literature">Литература</button><br>
-<button id="low">Юриспруденция</button><br>
+<h1 class="text-primary">Выбирай категорию:</h1><br>
+<button id="programming" type="button" class="btn btn-primary btn-lg btn-block">Программирование</button>
+<button id="physics" type="button" class="btn btn-primary btn-lg btn-block">Физика</button>
+<button id="chimistry" type="button" class="btn btn-primary btn-lg btn-block">Химия</button>
+<button id="oil" type="button" class="btn btn-primary btn-lg btn-block">Нефтяная промышленность</button>
+<button id="sport" type="button" class="btn btn-primary btn-lg btn-block">Спорт</button>
+<button id="phylosophy" type="button" class="btn btn-primary btn-lg btn-block">Философия</button>
+<button id="history" type="button" class="btn btn-primary btn-lg btn-block">История</button>
+<button id="math" type="button" class="btn btn-primary btn-lg btn-block">Математика</button>
+<button id="geography" type="button" class="btn btn-primary btn-lg btn-block">География</button>
+<button id="medicine" type="button" class="btn btn-primary btn-lg btn-block">Медицина</button>
+<button id="journalism" type="button" class="btn btn-primary btn-lg btn-block">Журналистика</button>
+<button id="literature" type="button" class="btn btn-primary btn-lg btn-block">Литература</button>
+<button id="low" type="button" class="btn btn-primary btn-lg btn-block">Юриспруденция</button>
 
 <script src="js/appTest.js" type="module"></script>
 </body>
