--- a/src/index.html
+++ b/src/index.html
@@ -8,12 +8,12 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <title>CYKA</title>
 </head>
-<body и>
+<body>
 
 <div class="container-fluid">
     <h1 class="text-primary">CYKA</h1>
     <h3 class="text-primary">Check Your Knowledge Automatically</h3>
-    <h5 class="text-primary">Узнай по какой теме тебе стоит дополнительно подготовиться перед экзаменом или собеседованием при трудоустройстве!<br>
+    <h5 class="text-primary">Готовишься к экзаменам или собеседованию?<br> Узнай по какой теме тебе стоит дополнительно подготовиться!<br>
     ШАГ 1 – выбери категорию, в которой ты хочешь проверить свои знания и навыки<br>
     ШАГ 2 – пройди тест<br>
     ШАГ 3 – получай результаты и готовься!</h5>
@@ -26,19 +26,19 @@
 
 <h3 class="text-primary">Feedback'шная:</h3>
 <div class="card" style="width: 18rem;">
-    <img src="jpeg/Larisa1.jpg" class="card-img-top" alt="...">
+    <img src="jpeg/Larisa1Yellow.jpg" class="card-img-top" alt="...">
     <div class="card-body">
         <p class="card-text">Лариса Семеновна:<br>После прохождения теста на этом ресурсе я поняла в каком направлении надо дальше изучать программирование! Теперь я работаю в Гугл!</p>
     </div>
 </div>
 <div class="card" style="width: 18rem;">
-    <img src="jpeg/Larisa2.jpg" class="card-img-top" alt="...">
+    <img src="jpeg/Larisa2Yellow.jpg" class="card-img-top" alt="...">
     <div class="card-body">
         <p class="card-text">Лариса Владимировна:<br>Большое спасибо коллективу CYKA! После прохождения теста я прозрела!</p>
     </div>
 </div>
 <div class="card" style="width: 18rem;">
-    <img src="jpeg/Firdaus.jpg" class="card-img-top" alt="...">
+    <img src="jpeg/FirdausYellow.jpg" class="card-img-top" alt="...">
     <div class="card-body">
         <p class="card-text">Фирдаус:<br>Задонатил миллион рублей! Где тест по татарскому языку???</p>
     </div>
