--- a/src/oilTest.html
+++ b/src/oilTest.html
@@ -11,41 +11,42 @@
 <body>
 <script type="text/javascript">
     let questionsTheme1 = [
-        ["Нефть – это смесь, состоящая","Только из жидких углеводородов","Только из газообразных углеводородов","Только из твердых углеводородов","Из жидких и растворенных в них газообразных и твердых углеводородов",4],
-        ["Укажите свойство, которое не относится к нефти","Легче воды","Растворима в воде","Густая темная жидкость","Не имеет постоянной температуры кипения",2],
-        ["Вязкость нефти при подъеме от забоя к устью скважины","Уменьшается","Увеличивается","Не изменяется","Зависит от химического состава нефти",2],
-        ["Укажите несуществующую теорию происхождения нефти","Биогенная","Неорганическая","Космогенная","Криогенная",4],
-        ["Нефть под землей находится в виде:","Жидкости, пропитывающей горные породы, как вода губку","В виде подземных озёр и полостей различного масштаба","Пребывает в различных фазовых состояниях, вплоть до кристаллического","В газообразном состоянии, при этом по мере поднятия по стволу скважины переходит в жидкую фазу",1],
+        ["Нефть – это смесь, состоящая", "Только из жидких углеводородов", "Только из газообразных углеводородов", "Только из твердых углеводородов", "Из жидких и растворенных в них газообразных и твердых углеводородов", 4],
+        ["Укажите свойство, которое не относится к нефти", "Легче воды", "Растворима в воде", "Густая темная жидкость", "Не имеет постоянной температуры кипения", 2],
+        ["Вязкость нефти при подъеме от забоя к устью скважины", "Уменьшается", "Увеличивается", "Не изменяется", "Зависит от химического состава нефти", 2],
+        ["Укажите несуществующую теорию происхождения нефти", "Биогенная", "Неорганическая", "Космогенная", "Криогенная", 4],
+        ["Нефть под землей находится в виде:", "Жидкости, пропитывающей горные породы, как вода губку", "В виде подземных озёр и полостей различного масштаба", "Пребывает в различных фазовых состояниях, вплоть до кристаллического", "В газообразном состоянии, при этом по мере поднятия по стволу скважины переходит в жидкую фазу", 1],
     ];
     let questionsTheme2 = [
-        ["В каких типах горных пород выявлено подавляющее большинство месторождений нефти?","Магматических","Метаморфических","Осадочных","Во всех примерно одинаково",3],
-        ["Часть природного резервуара, имеющего непроницаемые препятствия для дальнейшей миграции нефти и газа, в котором соответственно могут накапливаться нефть и газ называется:","Складка","Ловушка","Коллектор","Нефтесбор",2],
-        ["Давление, при котором газ начинает выделяться из жидкости, называют:","Давлением насыщения","Пластовым давлением","Забойным давлением","Критическим давлением",1],
-        ["Укажите перечень, в котором правильно расположены геологические элементы от крупного к более мелкому:","Залежь - месторождение – ловушка","Коллектор – месторождение - залежь","Бассейн – месторождение - залежь","Залежь – ловушка - месторождение",3],
-        ["Назовите свойство, не характерное для песчаной породы-коллектора:","Пористость","Проницаемость","Вязкость","Известковистость",3],
+        ["В каких типах горных пород выявлено подавляющее большинство месторождений нефти?", "Магматических", "Метаморфических", "Осадочных", "Во всех примерно одинаково", 3],
+        ["Часть природного резервуара, имеющего непроницаемые препятствия для дальнейшей миграции нефти и газа, в котором соответственно могут накапливаться нефть и газ называется:", "Складка", "Ловушка", "Коллектор", "Нефтесбор", 2],
+        ["Давление, при котором газ начинает выделяться из жидкости, называют:", "Давлением насыщения", "Пластовым давлением", "Забойным давлением", "Критическим давлением", 1],
+        ["Укажите перечень, в котором правильно расположены геологические элементы от крупного к более мелкому:", "Залежь - месторождение – ловушка", "Коллектор – месторождение - залежь", "Бассейн – месторождение - залежь", "Залежь – ловушка - месторождение", 3],
+        ["Назовите свойство, не характерное для песчаной породы-коллектора:", "Пористость", "Проницаемость", "Вязкость", "Известковистость", 3],
     ];
     let questionsTheme3 = [
-        ["Самый популярный способ добычи нефти в России это:","Газлифтный метод","Фонтанный метод","Скважинными насосами","Пьезоэлектрический метод",3],
-        ["Методы увеличения нефтеотдачи (МУН) относятся к ________способам добычи","Первичным","Вторичным","Третичным","Четвертичным",3],
-        ["Обычно эксплуатационные скважины располагают на нефтяном месторождении в соответствии с:","Планом горных работ","Проектом на строительство скважин","Сеткой скважин","В произвольном порядке",3],
-        ["Сейсморазведка, электроразведка, гравиразведка и магниторазведка к каким методам поисково-разведочных работ относятся?","Геофизическим","Геологическим","Гидрогеохимическим","Ни к одному из вышеперечисленных",1],
-        ["Расшифруйте общепринятую аббревиатуру СППД:","Система поддержания пластового давления","Система поддержания повышенной добычи","Скважинно-параметрический пластовый двигатель","Скважина поисковая параметрическая добывающая",1],
+        ["Самый популярный способ добычи нефти в России это:", "Газлифтный метод", "Фонтанный метод", "Скважинными насосами", "Пьезоэлектрический метод", 3],
+        ["Методы увеличения нефтеотдачи (МУН) относятся к ________способам добычи", "Первичным", "Вторичным", "Третичным", "Четвертичным", 3],
+        ["Обычно эксплуатационные скважины располагают на нефтяном месторождении в соответствии с:", "Планом горных работ", "Проектом на строительство скважин", "Сеткой скважин", "В произвольном порядке", 3],
+        ["Сейсморазведка, электроразведка, гравиразведка и магниторазведка к каким методам поисково-разведочных работ относятся?", "Геофизическим", "Геологическим", "Гидрогеохимическим", "Ни к одному из вышеперечисленных", 1],
+        ["Расшифруйте общепринятую аббревиатуру СППД:", "Система поддержания пластового давления", "Система поддержания повышенной добычи", "Скважинно-параметрический пластовый двигатель", "Скважина поисковая параметрическая добывающая", 1],
     ];
     let questionsTheme4 = [
-        ["Образец горной породы в виде цилиндрического столбика, извлеченный из скважины посредством специально предназначенного для этого вида бурения с целью изучения характеристики проходимых бурением горных пород, называется:","Целик","Керн","Шлам","Колонка",2],
-        ["Верхняя часть эксплуатационной добывающей скважины называется:","Устье","Забой","Зумпф","Башмак",1],
-        ["Для защиты эксплуатационной колонны в скважину спускают колонну стальных труб меньшего диаметра, которая называется:","Техническая колонна","Колонна штанг","Колонна насосно-компрессорных труб","Обсадная колонна",3],
-        ["Типовая конструкция нефтяной скважины состоит из следующих обязательных элементов: направление, _____________ , эксплуатационная колонна","Кондуктор","Колонна штанг","Зумпф","Вспомогательная колонна",1],
-        ["Производство работ по бурению скважин осуществляется в соответствии с:","Паспортом скважины","Журналом буровых работ","ГОСТ 21.001-2013","Геолого-техническим нарядом",4],
+        ["Образец горной породы в виде цилиндрического столбика, извлеченный из скважины посредством специально предназначенного для этого вида бурения с целью изучения характеристики проходимых бурением горных пород, называется:", "Целик", "Керн", "Шлам", "Колонка", 2],
+        ["Верхняя часть эксплуатационной добывающей скважины называется:", "Устье", "Забой", "Зумпф", "Башмак", 1],
+        ["Для защиты эксплуатационной колонны в скважину спускают колонну стальных труб меньшего диаметра, которая называется:", "Техническая колонна", "Колонна штанг", "Колонна насосно-компрессорных труб", "Обсадная колонна", 3],
+        ["Типовая конструкция нефтяной скважины состоит из следующих обязательных элементов: направление, _____________ , эксплуатационная колонна", "Кондуктор", "Колонна штанг", "Зумпф", "Вспомогательная колонна", 1],
+        ["Производство работ по бурению скважин осуществляется в соответствии с:", "Паспортом скважины", "Журналом буровых работ", "ГОСТ 21.001-2013", "Геолого-техническим нарядом", 4],
     ];
     let questionsTheme5 = [
-        ["Какая из нижеперечисленных стран не является участником ОПЭК?","Габон","Катар","Конго","Кувейт",2],
-        ["Расшифруйте аббревиатуру API:","Application programming interface","American Petroleum Institute","Amsterdam progressive insurance","Ale Pale Indian",2],
-        ["Укажите самую крупную нефтяную компанию России (по объемам добычи):","Роснефть","Сургутнефтегаз","Лукойл","Газпром нефть",1],
-        ["Какая из нижеперечисленных стран является лидером по запасам нефти?","ОАЭ","Венесуэла","Россия","Саудовская Аравия",2],
-        ["Какая из этих стран бывшего СССР обладает наибольшими запасами нефти?","Узбекистан","Туркменистан","Азербайджан","Казахстан",4],
+        ["Какая из нижеперечисленных стран не является участником ОПЭК?", "Габон", "Катар", "Конго", "Кувейт", 2],
+        ["Расшифруйте аббревиатуру API:", "Application programming interface", "American Petroleum Institute", "Amsterdam progressive insurance", "Ale Pale Indian", 2],
+        ["Укажите самую крупную нефтяную компанию России (по объемам добычи):", "Роснефть", "Сургутнефтегаз", "Лукойл", "Газпром нефть", 1],
+        ["Какая из нижеперечисленных стран является лидером по запасам нефти?", "ОАЭ", "Венесуэла", "Россия", "Саудовская Аравия", 2],
+        ["Какая из этих стран бывшего СССР обладает наибольшими запасами нефти?", "Узбекистан", "Туркменистан", "Азербайджан", "Казахстан", 4],
     ];
-    let questions = questionsTheme1.concat(questionsTheme2, questionsTheme3,questionsTheme4,questionsTheme5);
+    let questions;
+    questions = questionsTheme1.concat(questionsTheme2, questionsTheme3, questionsTheme4, questionsTheme5);
     let plus = 0;
     let time = 0;
     let cur_answer = 0;
@@ -53,70 +54,69 @@
 
     function sec() {
         time++;
-        document.getElementById('time').innerHTML='Затрачено времени: ' + time + ' сек';
+        document.getElementById('time').innerHTML = 'Затрачено времени: ' + time + ' сек';
     }
 
-    function check(num){
+    function check(num) {
 
-        if(num == 0){
+        if (num == 0) {
 
-            document.getElementById('answer1').style.display='block';
-            document.getElementById('answer2').style.display='block';
-            document.getElementById('answer3').style.display='block';
-            document.getElementById('answer4').style.display='block';
-            document.getElementById('question').style.display='block';
+            document.getElementById('answer1').style.display = 'block';
+            document.getElementById('answer2').style.display = 'block';
+            document.getElementById('answer3').style.display = 'block';
+            document.getElementById('answer4').style.display = 'block';
+            document.getElementById('question').style.display = 'block';
 
-            document.getElementById('answer1').innerHTML=questions[cur_answer][1];
-            document.getElementById('answer2').innerHTML=questions[cur_answer][2];
-            document.getElementById('answer3').innerHTML=questions[cur_answer][3];
-            document.getElementById('answer4').innerHTML=questions[cur_answer][4];
-            document.getElementById('question').innerHTML=questions[cur_answer][0];
+            document.getElementById('answer1').innerHTML = questions[cur_answer][1];
+            document.getElementById('answer2').innerHTML = questions[cur_answer][2];
+            document.getElementById('answer3').innerHTML = questions[cur_answer][3];
+            document.getElementById('answer4').innerHTML = questions[cur_answer][4];
+            document.getElementById('question').innerHTML = questions[cur_answer][0];
 
-            document.getElementById('start').style.display='none';
-            document.getElementById('end').style.display='inline';
+            document.getElementById('start').style.display = 'none';
+            document.getElementById('end').style.display = 'inline';
 
             let intervalID = setInterval(sec, 1000);
 
-        }else{
+        } else {
 
-            if( num ==  questions[cur_answer][5]){
+            if (num == questions[cur_answer][5]) {
                 plus++;
-                document.getElementById('result').innerHTML='Верно!';
-            }else{
-                document.getElementById('result').innerHTML="Неверно! Правильный ответ: " + questions[cur_answer][questions[cur_answer][5]];
+                document.getElementById('result').innerHTML = 'Верно!';
+            } else {
+                document.getElementById('result').innerHTML = "Неверно! Правильный ответ: " + questions[cur_answer][questions[cur_answer][5]];
             }
 
             cur_answer++;
-            if(cur_answer < count_answer){
+            if (cur_answer < count_answer) {
 
-                document.getElementById('answer1').innerHTML=questions[cur_answer][1];
-                document.getElementById('answer2').innerHTML=questions[cur_answer][2];
-                document.getElementById('answer3').innerHTML=questions[cur_answer][3];
-                document.getElementById('answer4').innerHTML=questions[cur_answer][4];
-                document.getElementById('question').innerHTML=questions[cur_answer][0];
+                document.getElementById('answer1').innerHTML = questions[cur_answer][1];
+                document.getElementById('answer2').innerHTML = questions[cur_answer][2];
+                document.getElementById('answer3').innerHTML = questions[cur_answer][3];
+                document.getElementById('answer4').innerHTML = questions[cur_answer][4];
+                document.getElementById('question').innerHTML = questions[cur_answer][0];
 
-            }else{
+            } else {
 
                 document.getElementById('time').id = 'stop';
-                document.getElementById('answer1').style.display='none';
-                document.getElementById('answer2').style.display='none';
-                document.getElementById('answer3').style.display='none';
-                document.getElementById('answer4').style.display='none';
-                document.getElementById('question').style.display='none';
-                document.getElementById('end').style.display='inline';
+                document.getElementById('answer1').style.display = 'none';
+                document.getElementById('answer2').style.display = 'none';
+                document.getElementById('answer3').style.display = 'none';
+                document.getElementById('answer4').style.display = 'none';
+                document.getElementById('question').style.display = 'none';
+                document.getElementById('end').style.display = 'inline';
 
-                let percent =  Math.round(plus/count_answer*100);
+                let percent = Math.round(plus / count_answer * 100);
                 let res = 'Плохо!';
-                if(percent>70) res = 'Хорошо!';
-                if(percent==100) res = 'Отлично!';
+                if (percent > 70) res = 'Хорошо!';
+                if (percent == 100) res = 'Отлично!';
 
-                document.getElementById('result').innerHTML='Правильных ответов: ' + plus + ' из ' + count_answer + ' (' + percent + '%)<br>' + res;
+                document.getElementById('result').innerHTML = 'Правильных ответов: ' + plus + ' из ' + count_answer + ' (' + percent + '%)<br>' + res;
             }
         }
     }
 </script>
-</body>
-<body>
+
 
 <p style="font-size: 38px;font-weight: bold;padding-top: 2px;" id="time">Затрачено времени: 0 сек</p>
 <p style="font-size: 38px;font-weight: bold;padding-top: 2px;" id="result"></p>
@@ -132,7 +132,8 @@
 <button onclick="check(4)" id="answer4"></button>
 <br>
 <button id="start" onclick="check(0)">Приступить к тесту</button>
-<script type="text/javascript"> let curent_url = document.URL; document.write("<a id='end' style='display: none;' href='" + curent_url + "'>Начать сначала</a>"); </script>
+<script type="text/javascript"> let curent_url = document.URL;
+document.write("<a id='end' style='display: none;' href='" + curent_url + "'>Начать сначала</a>"); </script>
 
 
 </body>
