--- a/src/oilTest.html
+++ b/src/oilTest.html
@@ -45,8 +45,32 @@
         ["Какая из нижеперечисленных стран является лидером по запасам нефти?", "ОАЭ", "Венесуэла", "Россия", "Саудовская Аравия", 2],
         ["Какая из этих стран бывшего СССР обладает наибольшими запасами нефти?", "Узбекистан", "Туркменистан", "Азербайджан", "Казахстан", 4],
     ];
-    let questions;
-    questions = questionsTheme1.concat(questionsTheme2, questionsTheme3, questionsTheme4, questionsTheme5);
+    function mix(questionsTheme) {
+        let index;
+        let valueIndex;
+        for (let i=0; i<=questionsTheme.length-1; i++) {
+            index = Math.floor(Math.random()*i);
+            valueIndex = questionsTheme[index];
+            questionsTheme[index] = questionsTheme[i];
+            questionsTheme[i] = valueIndex;
+        }
+        return questionsTheme;
+    }
+
+    let questionsTheme1Shuffled = mix(questionsTheme1);
+    let questionsTheme2Shuffled = mix(questionsTheme2);
+    let questionsTheme3Shuffled = mix(questionsTheme3);
+    let questionsTheme4Shuffled = mix(questionsTheme4);
+    let questionsTheme5Shuffled = mix(questionsTheme5);
+
+    let questionsTheme1Cutted = questionsTheme1Shuffled.slice(0,3);
+    let questionsTheme2Cutted = questionsTheme2Shuffled.slice(0,3);
+    let questionsTheme3Cutted = questionsTheme3Shuffled.slice(0,3);
+    let questionsTheme4Cutted = questionsTheme4Shuffled.slice(0,3);
+    let questionsTheme5Cutted = questionsTheme5Shuffled.slice(0,3);
+
+    let questions = questionsTheme1Cutted.concat(questionsTheme2Cutted, questionsTheme3Cutted, questionsTheme4Cutted, questionsTheme5Cutted);
+
     let plus = 0;
     let time = 0;
     let cur_answer = 0;
