some changes in oilTest.html and in styles

--- a/src/newTest.html
+++ b/src/newTest.html
@@ -5,23 +5,23 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="style/style.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <title>Форма внесения нового теста</title>
 </head>
 <body>
-<p>Введите тему теста:</p>
+<h5 class="text-primary">Введите тему теста:</h5>
 <input id="newTheme">
-<p>Введите вопрос:</p>
+<h5 class="text-primary">Введите вопрос:</h5>
 <input id="newQuestion">
-<p>Введите правильный ответ:</p>
+<h5 class="text-primary">Введите правильный ответ:</h5>
 <input id="newAnswer">
-<p>Введите первый неправильный ответ:</p>
+<h5 class="text-primary">Введите первый неправильный ответ:</h5>
 <input id="newWrongAnswer1">
-<p>Введите второй неправильный ответ:</p>
+<h5 class="text-primary">Введите второй неправильный ответ:</h5>
 <input id="newWrongAnswer2">
-<p>Введите третий неправильный ответ:</p>
-<input id="newWrongAnswer3"><br><br><br>
-<button>Отправить на рассмотрение</button>
+<h5 class="text-primary">Введите третий неправильный ответ:</h5>
+<input id="newWrongAnswer3"><br><br>
+<button id="newTest" type="button" class="btn btn-primary">Отправить на рассмотрение</button>
 <br><br><br>
 Спасибо!
 </body>
