--- a/src/donat.html
+++ b/src/donat.html
@@ -5,18 +5,19 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="style/style.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <title>Внесение денег</title>
 </head>
 <body>
-<p>Введите имя и фамилию:</p>
+<h5 class="text-primary">Введите имя и фамилию:</h5>
 <input id="name">
-<p>Введите номер банковской карты:</p>
+<h5 class="text-primary">Введите номер банковской карты:</h5>
 <input id="number">
-<p>Введите срок действия банковской карты:</p>
+<h5 class="text-primary">Введите срок действия банковской карты:</h5>
 <input id="valid">
-<p>Введите pin-code банковской карты:</p>
-<input id="pin"><br><br><br>
-Спасибо!
+<h5 class="text-primary">Введите pin-code банковской карты:</h5>
+<input id="pin"><br>
+<button id="newTest" type="button" class="btn btn-primary">Отправить</button><br><br>
+<h5 class="text-primary">Спасибо!</h5>
 </body>
 </html>
