--- a/src/index.html
+++ b/src/index.html
@@ -50,7 +50,7 @@
 </html>
 
 <!--TODO: 1. Оформить красиво Feedback'шную (div'ы на один уровень) в index.html-->
-<!--TODO: 2. Вывести в appOilTest сам скрипт из index.html-->
+<!--TODO: 2. Вывести в appOilTest сам скрипт из oilTest.html-->
 <!--TODO: 3. Реализовать счетчик правильных ответов для каждой подкатегории ответов отдельно-->
 <!--TODO: 4. После выполнения п.3 - прописать вывод соответствующих рекомендаций-->
 <!--TODO: 5. Каким-то образом реализовать отправку данных из donat.html и newTest.html-->
