--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,14 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <style>
+        .card {
+            float:left;
+            margin: 0 15px 15px 0;
+            text-align:center;
+            padding: 10px;
+        }
+    </style>
     <title>CYKA</title>
 </head>
 <body>
@@ -22,7 +30,7 @@
 <button id="training" type="button" class="btn btn-primary">Приступить к тренировке</button>
 <button id="donat" type="button" class="btn btn-primary">Задонатить деньги на развитие ресурса</button>
 <button id="newTest" type="button" class="btn btn-primary">Предложить тест</button><br><br>
-
+<h6>Здесь могла быть ваша реклама! <a href="donat.html">Кликайте!</a></h6><br><br><br><br>
 <h3 class="text-primary">Feedback'шная:</h3>
 <div class="card" style="width: 18rem;">
     <img src="jpeg/Larisa1Yellow.jpg" class="card-img-top" alt="...">
@@ -42,14 +50,14 @@
         <p class="card-text">Фирдаус:<br>Задонатил миллион рублей! Где тест по татарскому языку???</p>
     </div>
 </div>
+<br><br>
 
-<h6>Здесь могла быть ваша реклама! <a href="donat.html">Кликайте!</a></h6>
 <script src="js/app.js" type="module"></script>
 
 </body>
 </html>
 
-<!--TODO: 1. Оформить красиво Feedback'шную (div'ы на один уровень) в index.html-->
+<!--ВЫПОЛНЕНО TODO: 1. Оформить красиво Feedback'шную (div'ы на один уровень) в index.html-->
 <!--TODO: 2. Вывести в appOilTest сам скрипт из oilTest.html-->
 <!--TODO: 3. Реализовать счетчик правильных ответов для каждой подкатегории ответов отдельно-->
 <!--TODO: 4. После выполнения п.3 - прописать вывод соответствующих рекомендаций-->
