--- a/src/index.html
+++ b/src/index.html
@@ -62,7 +62,7 @@
 <!--TODO: 3. Реализовать счетчик правильных ответов для каждой подкатегории ответов отдельно-->
 <!--TODO: 4. После выполнения п.3 - прописать вывод соответствующих рекомендаций-->
 <!--TODO: 5. Каким-то образом реализовать отправку данных из donat.html и newTest.html-->
-<!--TODO: 6. Реализовать после прохождения бонуса кнопку "получить бонус за тест" - после чего играет музыка-->
+<!--ВЫПОЛНЕНО TODO: 6. Реализовать после прохождения бонуса кнопку "получить бонус за тест" - после чего играет музыка-->
 <!--TODO: 7. Реализовать всплывашку "получить подсказку", после кликанья по который выйдет сообщение: "никаих подсказок!!!"-->
 <!--TODO: 8. В случае ошибки в первом же вопросе - реализовать стеб над тестируемым с направлением на подготовку-->
 <!--TODO: 9. Написать тест-->
