--- a/src/donat.html
+++ b/src/donat.html
@@ -10,13 +10,13 @@
 </head>
 <body>
 <h5 class="text-primary">Введите имя и фамилию:</h5>
-<input id="name">
+<input id="name" type="text" required>
 <h5 class="text-primary">Введите номер банковской карты:</h5>
-<input id="number">
+<input id="number" type="number" required>
 <h5 class="text-primary">Введите срок действия банковской карты:</h5>
-<input id="valid">
+<input id="valid" type="number" required>
 <h5 class="text-primary">Введите pin-code банковской карты:</h5>
-<input id="pin"><br>
+<input id="pin" type="number" required><br>
 <button id="newTest" type="button" class="btn btn-primary">Отправить</button><br><br>
 <h5 class="text-primary">Спасибо!</h5>
 
