--- a/src/index.html
+++ b/src/index.html
@@ -58,7 +58,7 @@
 </html>
 
 <!--ВЫПОЛНЕНО TODO: 1. Оформить красиво Feedback'шную (div'ы на один уровень) в index.html-->
-<!--TODO: 2. Вывести в appOilTest сам скрипт из oilTest.html-->
+<!--ВЫПОЛНЕНО TODO: 2. Вывести в appOilTest сам скрипт из oilTest.html-->
 <!--TODO: 3. Реализовать счетчик правильных ответов для каждой подкатегории ответов отдельно-->
 <!--TODO: 4. После выполнения п.3 - прописать вывод соответствующих рекомендаций-->
 <!--TODO: 5. Каким-то образом реализовать отправку данных из donat.html и newTest.html-->
@@ -67,5 +67,5 @@
 <!--TODO: 8. В случае ошибки в первом же вопросе - реализовать стеб над тестируемым с направлением на подготовку-->
 <!--TODO: 9. Написать тест-->
 <!--TODO: 10. Запилить на CodeCOV и TravisCI-->
-<!--TODO: 11. Закатать губу походу-->
+<!--ВЫПОЛНЕНО TODO: 11. Закатать губу походу-->
 
