same style for all doc's

--- a/src/donat.html
+++ b/src/donat.html
@@ -16,7 +16,7 @@
 <h5 class="text-primary">Введите срок действия банковской карты:</h5>
 <input id="valid" type="number" required>
 <h5 class="text-primary">Введите pin-code банковской карты:</h5>
-<input id="pin" type="number" required><br>
+<input id="pin" type="number" required><br><br>
 <button id="newTest" type="button" class="btn btn-primary">Отправить</button><br><br>
 <h5 class="text-primary">Спасибо!</h5>
 
