--- a/src/index.html
+++ b/src/index.html
@@ -30,7 +30,7 @@
 <button id="training" type="button" class="btn btn-primary">Приступить к тренировке</button>
 <button id="donat" type="button" class="btn btn-primary">Задонатить деньги на развитие ресурса</button>
 <button id="newTest" type="button" class="btn btn-primary">Предложить тест</button><br><br>
-<h6>Здесь могла быть ваша реклама! <a href="donat.html">Кликайте!</a></h6><br><br><br><br>
+<h6 class="text-primary">Здесь могла быть ваша реклама! <a href="donat.html">Кликайте!</a></h6><br><br><br><br>
 <h3 class="text-primary">Feedback'шная:</h3>
 <div class="card" style="width: 18rem;">
     <img src="jpeg/Larisa1Yellow.jpg" class="card-img-top" alt="...">
