--- a/src/newTest.html
+++ b/src/newTest.html
@@ -23,6 +23,6 @@
 <input id="newWrongAnswer3"><br><br>
 <button id="newTest" type="button" class="btn btn-primary">Отправить на рассмотрение</button>
 <br><br><br>
-Спасибо!
+<h4 class="text-primary">Спасибо!</h4>
 </body>
 </html>
