--- a/src/index.html
+++ b/src/index.html
@@ -57,15 +57,13 @@
 </body>
 </html>
 
-<!--ВЫПОЛНЕНО TODO: 1. Оформить красиво Feedback'шную (div'ы на один уровень) в index.html-->
-<!--ВЫПОЛНЕНО TODO: 2. Вывести в appOilTest сам скрипт из oilTest.html-->
+<!--TODO: 1. Вопросы не в массивах, в через объекты-->
+<!--TODO: 2. Убрать лишнее, это образовательный ресурс-->
 <!--TODO: 3. Реализовать счетчик правильных ответов для каждой подкатегории ответов отдельно-->
 <!--TODO: 4. После выполнения п.3 - прописать вывод соответствующих рекомендаций-->
 <!--TODO: 5. Каким-то образом реализовать отправку данных из donat.html и newTest.html-->
-<!--ВЫПОЛНЕНО TODO: 6. Реализовать после прохождения бонуса кнопку "получить бонус за тест" - после чего играет музыка-->
-<!--TODO: 7. Реализовать всплывашку "получить подсказку", после кликанья по который выйдет сообщение: "никаих подсказок!!!"-->
-<!--TODO: 8. В случае ошибки в первом же вопросе - реализовать стеб над тестируемым с направлением на подготовку-->
-<!--TODO: 9. Написать тест-->
-<!--TODO: 10. Запилить на CodeCOV и TravisCI-->
-<!--ВЫПОЛНЕНО TODO: 11. Закатать губу походу-->
+<!--TODO: 6. Джейсон-->
+<!--TODO: 7. Убрать алерты, создать страничку - заглушку-->
+<!--TODO: 8. Написать тест-->
+<!--TODO: 9. Запилить на CodeCOV, TravisCI и Github pages-->
 
