--- a/src/oilTest.html
+++ b/src/oilTest.html
@@ -6,6 +6,7 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="hint.css">
     <title>ТЕСТ по нефтяной промышленности</title>
 </head>
 <body>
@@ -29,7 +30,6 @@
     let curent_url = document.URL;
     document.write("<a id='end' style='display: none;' href='" + curent_url + "'>Начать сначала</a>");
 </script><br>
-
 <script src="js/appOilTest.js" type="module"></script>
 <script src="js/bonus.js" type="module"></script>
 <script src="js/hint.js" type="module"></script>
